# openreplay

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUMMARY.md  TROUBLESHOOTING.md  USAGE.md  cli.py  config.example.yaml  config.yaml  docker-compose.yml  knowledge.md  main.py  pyproject.toml  requirements.txt  response_template.txt  setup.py
.github/: CODE_OF_CONDUCT.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md  support_question.md
.github/PULL_REQUEST_TEMPLATE/: pull_request.md
.github/workflows/: ci.yml
commands/: __init__.py  auth.py  fetch.py  generate.py  publish.py  select.py
core/: __init__.py  policies.py  prompts.py
doc/: description.md  plan.md
doc/plan/: 001_setup_project_structure.md  002_create_config_module.md  003_create_config_yaml.md  004_create_knowledge_module.md  005_create_template_module.md  006_create_policies_module.md  007_create_prompts_module.md  008_create_llm_generator.md  010_create_youtube_auth.md  INDEX.md  (+17 more)
examples/: README.md  client_secret.example.json  config.example.yaml  example_usage.py  knowledge.example.md  response_template.example.txt
llm/: __init__.py  generator.py
openreplay/: __init__.py  __main__.py  config.py  knowledge.py  template.py
providers/: __init__.py  base.py  youtube.py
tests/: test_cli.py  test_config.py  test_end_to_end_flow.py  test_generate.py  test_generate_integration.py  test_generator.py  test_knowledge.py  test_policies.py  test_prompts.py  test_template.py  test_youtube.py
